Added reducer and asyncthunk add setup for portal and add web3 test Update CORS_ORIGIN

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@metamask/detect-provider": "^1.2.0",
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.90",
     "@mui/material": "^5.9.0",
@@ -20,45 +21,45 @@
     "@nestjs/typeorm": "^9.0.0",
     "@reduxjs/toolkit": "^1.8.3",
     "ajv": "^6.12.6",
+    "apisauce": "^2.1.1",
     "axios": "^0.27.2",
+    "assert": "^2.0.0",
+    "big.js": "^6.1.1",
+    "buffer": "^6.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "clsx": "^1.1.1",
+    "crypto-browserify": "^3.12.0",
     "date-fns": "^2.27.0",
     "dotenv": "^16.0.1",
+    "eventemitter3": "^4.0.7",
+    "https-browserify": "^1.0.0",
     "lodash": "^4.17.21",
     "nestjs-pino": "^2.6.0",
     "next": "^12.2.2",
+    "os-browserify": "^0.3.0",
     "pg": "^8.7.3",
     "pino-http": "^7.1.0",
     "pino-pretty": "^8.1.0",
+    "qs": "^6.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^11.5.1",
     "react-redux": "^8.0.2",
     "react-table": "^7.8.0",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.1.0",
-    "swagger-ui-express": "^4.4.0",
-    "typeorm": "^0.3.7",
-    "qs": "^6.10.1",
     "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "crypto-browserify": "^3.12.0",
-    "https-browserify": "^1.0.0",
-    "os-browserify": "^0.3.0",
-    "@metamask/detect-provider": "^1.2.0",
-    "apisauce": "^2.1.1",
-    "assert": "^2.0.0",
-    "big.js": "^6.1.1",
-    "buffer": "^6.0.3",
-    "clsx": "^1.1.1",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.1.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "swagger-ui-express": "^4.4.0",
     "tslib": "^2.3.0",
+    "typeorm": "^0.3.7",
+    "typeorm-naming-strategies": "^4.1.0",
     "url": "^0.11.0",
-    "web3": "^1.7.4",
-    "typeorm-naming-strategies": "^4.1.0"
+    "web3": "^1.7.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
