--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@starterapp/common": "../common"
+    "@starterapp/common": "../common",
+    "@starterapp/contract": "../contract"
   },
   "scripts": {
     "bootstrap": "../../scripts/bootstrap",
