added journal endpoint Add custom webpack fallback config for web3 Fix next config

--- a/package.json
+++ b/package.json
@@ -38,6 +38,24 @@
     "rxjs": "^7.1.0",
     "swagger-ui-express": "^4.4.0",
     "typeorm": "^0.3.7",
+    "qs": "^6.10.1",
+    "redux": "^4.1.0",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "@metamask/detect-provider": "^1.2.0",
+    "apisauce": "^2.1.1",
+    "assert": "^2.0.0",
+    "big.js": "^6.1.1",
+    "buffer": "^6.0.3",
+    "clsx": "^1.1.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "tslib": "^2.3.0",
+    "url": "^0.11.0",
+    "web3": "^1.7.4",
     "typeorm-naming-strategies": "^4.1.0"
   },
   "devDependencies": {
