Add metamask and signature signing validation

--- a/packages/portal/.env.local
+++ b/packages/portal/.env.local
@@ -2,3 +2,5 @@ PORT=5000
 NEXT_PUBLIC_API_SERVER_SCHEME=http
 NEXT_PUBLIC_API_SERVER_HOST=localhost
 NEXT_PUBLIC_API_SERVER_PORT=3000
+NEXT_PUBLIC_TOKEN_ADDR=0xC102B96F00ACd60bAff261c0317b3e50F6ef8D00
+NEXT_PUBLIC_CONTRACT_ROLES_ADDR=0xe83fb28230df628e453D43a090634fEFb5919B6C
