--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@reduxjs/toolkit": "^1.8.3",
     "ajv": "^6.12.6",
     "apisauce": "^2.1.1",
-    "axios": "^0.27.2",
     "assert": "^2.0.0",
+    "axios": "^0.27.2",
     "big.js": "^6.1.1",
     "buffer": "^6.0.3",
     "class-transformer": "^0.5.1",
@@ -33,11 +33,13 @@
     "date-fns": "^2.27.0",
     "dotenv": "^16.0.1",
     "eventemitter3": "^4.0.7",
+    "express-session": "^1.17.3",
     "https-browserify": "^1.0.0",
     "lodash": "^4.17.21",
     "nestjs-pino": "^2.6.0",
     "next": "^12.2.2",
     "os-browserify": "^0.3.0",
+    "paseto": "^3.1.0",
     "pg": "^8.7.3",
     "pino-http": "^7.1.0",
     "pino-pretty": "^8.1.0",
@@ -72,6 +74,7 @@
     "@openzeppelin/contracts-upgradeable": "^4.4.0",
     "@openzeppelin/hardhat-upgrades": "^1.12.0",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.5",
     "@types/jest": "^27.0.7",
     "@types/lodash": "^4.14.182",
     "@types/node": "^16.0.0",
