--- a/packages/portal/tsconfig.json
+++ b/packages/portal/tsconfig.json
@@ -4,7 +4,13 @@
     "outDir": "dist",
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./*"]
+      "~/*": ["./*"],
+      "crypto": ["../../node_modules/crypto-browserify"],
+      "stream": ["../../node_modules/stream-browserify"],
+      "assert": ["../../node_modules/assert"],
+      "http": ["../../node_modules/stream-http"],
+      "https": ["../../node_modules/https-browserify"],
+      "os": ["../../node_modules/os-browserify"]
     }
   },
   "include": [
