--- a/tsconfig.next.json
+++ b/tsconfig.next.json
@@ -6,6 +6,6 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "module": "esnext",
     "noEmit": true,
-    "target": "es5"
+    "target": "es5",
   }
 }
