--- a/package.json
+++ b/package.json
@@ -67,24 +67,29 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@next/eslint-plugin-next": "^12.2.2",
-    "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "@nomiclabs/hardhat-etherscan": "https://gitpkg.now.sh/victaphu/hardhat/packages/hardhat-etherscan?master",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@openzeppelin/contracts": "^4.4.0",
-    "@openzeppelin/contracts-upgradeable": "^4.4.0",
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@openzeppelin/contracts": "^4.7.1",
+    "@openzeppelin/contracts-upgradeable": "^4.7.1",
     "@openzeppelin/hardhat-upgrades": "^1.12.0",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.2",
+    "@types/chai": "^4.3.1",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.5",
     "@types/jest": "^27.0.7",
     "@types/lodash": "^4.14.182",
-    "@types/node": "^16.0.0",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "big.js": "^6.1.1",
-    "chai": "^4.3.4",
+    "chai": "^4.3.6",
     "chance": "^1.1.8",
-    "dotenv": "^10.0.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.1",
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.2.6",
@@ -93,13 +98,14 @@
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.5.1",
-    "fs-extra": "^10.0.0",
-    "hardhat": "^2.8.3",
+    "ethereum-waffle": "^3.4.4",
+    "ethers": "^5.6.9",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^10.1.0",
+    "hardhat": "^2.10.1",
     "hardhat-contract-sizer": "^2.1.1",
-    "hardhat-deploy": "^0.9.12",
-    "hardhat-gas-reporter": "^1.0.4",
+    "hardhat-deploy": "^0.11.11",
+    "hardhat-gas-reporter": "^1.0.8",
     "husky": "^8.0.1",
     "jest": "^27.5.1",
     "jest-extended": "^2.0.0",
@@ -110,6 +116,8 @@
     "solhint": "^3.3.6",
     "solidity-coverage": "^0.7.17",
     "ts-jest": "^27.0.7",
+    "ts-node": "^10.9.1",
+    "typechain": "^8.1.0",
     "typescript": "^4.7.4"
   },
   "scripts": {
