--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express-session": "^1.17.3",
     "https-browserify": "^1.0.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "nestjs-pino": "^2.6.0",
     "next": "^12.2.2",
     "os-browserify": "^0.3.0",
