--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^11.5.1",
+    "react-hook-form": "^7.33.1",
     "react-redux": "^8.0.2",
     "react-table": "^7.8.0",
     "redux": "^4.1.0",
