Update JReview contract

--- a/packages/portal/.env.local
+++ b/packages/portal/.env.local
@@ -4,4 +4,5 @@ NEXT_PUBLIC_API_SERVER_HOST=localhost
 NEXT_PUBLIC_API_SERVER_PORT=3000
 NEXT_PUBLIC_TOKEN_ADDR=0xcAebB9D9dED25B7F7e4f739003A9e17dbCaDB41E
 NEXT_PUBLIC_CONTRACT_ROLES_ADDR=0xe83fb28230df628e453D43a090634fEFb5919B6C
+NEXT_PUBLIC_JREVIEW_ADDR=0x4cD1EFE910f640e0b6cCe64C54C035f68EF1Ec8e
 NEXT_PUBLIC_JGOVNFT_ADDR=0x30C6BDEfCa94Dc99213e94aA290e127694E0C805
