Use package lock version 1

--- a/packages/portal/.env.local
+++ b/packages/portal/.env.local
@@ -1,7 +1,7 @@
 PORT=5000
-NEXT_PUBLIC_API_SERVER_SCHEME=http
-NEXT_PUBLIC_API_SERVER_HOST=localhost
-NEXT_PUBLIC_API_SERVER_PORT=3000
+NEXT_PUBLIC_API_SERVER_SCHEME=https
+NEXT_PUBLIC_API_SERVER_HOST=serverasc4dxre-dev-machine-server-3000.morpheuslabs.io
+NEXT_PUBLIC_API_SERVER_PORT=443
 NEXT_PUBLIC_TOKEN_ADDR=0x8922F49DE0e9381820a8Dd67f075aCe17a734524
 NEXT_PUBLIC_CONTRACT_ROLES_ADDR=0xe83fb28230df628e453D43a090634fEFb5919B6C
 NEXT_PUBLIC_JREVIEW_ADDR=0x9f33D292259bd9A8751932D2aa193Bb0c29d8328
