--- a/packages/service/.env
+++ b/packages/service/.env
@@ -1,8 +1,8 @@
 ENVIRONMENT=LOCAL
 LOG_LEVEL=DEBUG
 
-CORS_ORIGIN=http://localhost:5000
-CLIENT_URL=http://localhost:5000
+CORS_ORIGIN=https://serverasc4dxre-dev-machine-server-5000.morpheuslabs.io
+CLIENT_URL=https://serverasc4dxre-dev-machine-server-5000.morpheuslabs.io
 
 PORT=3000
 
