Adjust env for local dev

--- a/packages/service/.env
+++ b/packages/service/.env
@@ -4,6 +4,9 @@ LOG_LEVEL=DEBUG
 CORS_ORIGIN=https://serverasc4dxre-dev-machine-server-5000.morpheuslabs.io
 CLIENT_URL=https://serverasc4dxre-dev-machine-server-5000.morpheuslabs.io
 
+CORS_ORIGIN=http://localhost:5000
+CLIENT_URL=http://localhost:5000
+
 PORT=3000
 
 POSTGRES_HOST=localhost
